@@ -4,6 +4,7 @@ import com.braidsbeautyByAngie.aggregates.constants.Constants;
 import com.braidsbeautyByAngie.aggregates.dto.*;
 import com.braidsbeautyByAngie.aggregates.request.RequestProduct;
 import com.braidsbeautyByAngie.aggregates.response.categories.ResponseCategory;
+import com.braidsbeautyByAngie.aggregates.response.categories.ResponseCategoryy;
 import com.braidsbeautyByAngie.aggregates.response.categories.ResponseSubCategory;
 import com.braidsbeautyByAngie.aggregates.response.products.*;
 import com.braidsbeautyByAngie.entity.*;
@@ -11,6 +12,8 @@ import com.braidsbeautyByAngie.mapper.*;
 import com.braidsbeautyByAngie.ports.out.ProductServiceOut;
 import com.braidsbeautyByAngie.repository.*;
 
+import com.braidsbeautybyangie.sagapatternspringboot.aggregates.AppExceptions.AppException;
+import com.braidsbeautybyangie.sagapatternspringboot.aggregates.AppExceptions.AppExceptionNotFound;
 import lombok.RequiredArgsConstructor;
 
 import org.slf4j.Logger;
@@ -23,6 +26,8 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.sql.Timestamp;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -40,22 +45,18 @@ public class ProductAdapter implements ProductServiceOut {
     private final PromotionRepository promotionRepository;
 
     private static final Logger logger = LoggerFactory.getLogger(ProductAdapter.class);
+    private final ProductItemMapper productItemMapper;
+    private final ItemProductAdapter itemProductAdapter;
+    private final ProductItemRepository productItemRepository;
 
     @Transactional
     @Override
     public ProductDTO createProductOut(RequestProduct requestProduct) {
         logger.info("Creating product with name: {}", requestProduct.getProductName());
-        if(productNameExistsByName(requestProduct.getProductName())) throw new RuntimeException("The product name already exists");
-        if (!productCategoryRepository.existByProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId())) throw new RuntimeException("Category not found");
-        ProductCategoryEntity productCategoryEntity = productCategoryRepository.findProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId()).orElseThrow(() -> new RuntimeException("Category not found"));;
-        //todo: validar la existencia por id de las promociones
-        List<PromotionEntity> promotionSaved = productCategoryEntity.getPromotionEntities().stream().collect(Collectors.toList());
-        List<PromotionEntity> promotionEntityList= promotionRepository.findAllByPromotionIdAndStateTrue(requestProduct.getPromotionId());
-        promotionSaved.addAll(promotionEntityList);
-        productCategoryEntity.setPromotionEntities(promotionSaved.stream().collect(Collectors.toSet()));
-        //add promotiones to our repository
-        ProductCategoryEntity productCategorySaved = productCategoryRepository.save(productCategoryEntity);
-        //todo:quitar el precio de producto, ya que existe solo en productoItem
+        if(productNameExistsByName(requestProduct.getProductName())) throw new AppException("The product name already exists");
+        ProductCategoryEntity productCategorySaved = productCategoryRepository.findProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId()).orElseThrow(()->
+                new AppExceptionNotFound("Category not found"));
+
         ProductEntity productEntity = ProductEntity.builder()
                 .productName(requestProduct.getProductName())
                 .productDescription(requestProduct.getProductDescription())
@@ -65,73 +66,58 @@ public class ProductAdapter implements ProductServiceOut {
                 .modifiedByUser("TEST")
                 .createdAt(Constants.getTimestamp())
                 .build();
+
+        ProductEntity productEntitySaved = productRepository.save(productEntity);
+
         logger.info("Product '{}' created successfully with ID: {}",productEntity.getProductName(),productEntity.getProductId());
-        return productMapper.mapProductEntityToDto(productRepository.save(productEntity));
+        return productMapper.mapProductEntityToDto(productEntitySaved);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public Optional<ResponseProduct> findProductByIdOut(Long productId) {
-        logger.info("Searching for product with ID: {}", productId);
-        Optional<ProductEntity> productEntityOpt = getProductEntity(productId);
-        if (productEntityOpt.isEmpty()) {
-            return Optional.empty();
+    public ResponseProduct findProductByIdOut(Long productId) {
+        List<Object[]> results = productRepository.findProductDetailsById(productId);
+
+        if (results.isEmpty()) {
+            throw new AppExceptionNotFound("Product not found with ID: " + productId);
         }
-        ProductEntity productEntity = productEntityOpt.get();
 
-        // Construir subcategorías y promociones para la categoría del producto
-        List<ResponseSubCategory> subCategoryList = productEntity.getProductCategoryEntity().getSubCategories()
-                .stream()
-                .map(subCat -> {
-                    ResponseSubCategory responseSubCategory = new ResponseSubCategory();
-                    responseSubCategory.setProductCategoryDTO(productCategoryMapper.mapCategoryEntityToDTO(subCat));
-                    return responseSubCategory;
-                }).toList();
-
-        List<PromotionDTO> promotionDTOList = promotionMapper.mapPromotionListToDtoList(
-                productEntity.getProductCategoryEntity().getPromotionEntities());
-
-        ResponseCategory responseCategory = ResponseCategory.builder()
-                .responseSubCategoryList(subCategoryList)
-                .productCategoryDTO(productCategoryMapper.mapCategoryEntityToDTO(productEntity.getProductCategoryEntity()))
-                .promotionDTOList(Set.copyOf(promotionDTOList))
+        // Mapear datos del producto
+        ResponseProduct productDetail = ResponseProduct.builder()
+                .productId((Long) results.get(0)[0])
+                .productName((String) results.get(0)[1])
+                .productDescription((String) results.get(0)[2])
+                .productImage((String) results.get(0)[3])
+                .responseProductItemDetails(new ArrayList<>())
                 .build();
 
-        // Construir opciones de variación y variaciones finales para el producto
-        List<ResponseVariationFinal> responseVariationFinals = productEntity.getProductItemEntities()
-                .stream()
-                .map(productItemEntity -> {
-                    ResponseVariationFinal responseVariationFinal = new ResponseVariationFinal();
-                    List<VariationOptionDTO> variationOptionDTOList = productItemEntity.getVariationOptionEntitySet()
-                            .stream()
-                            .map(variationOptionMapper::mapVariationOptionEntityToDto)
-                            .toList();
-                    responseVariationFinal.setVariationOptionDTOList(variationOptionDTOList);
-                    return responseVariationFinal;
-                }).toList();
+        // Mapear ítems y variaciones
+        Map<Long, ResponseProductItemDetaill> itemMap = new HashMap<>();
 
-        List<ResponseVariation> responseVariationList = responseVariationFinals.stream()
-                .map(responseVariationFinal -> {
-                    ResponseVariation responseVariation = new ResponseVariation();
-                    responseVariation.setResponseVariationFinals(responseVariationFinals);
-                    return responseVariation;
-                }).toList();
+        for (Object[] row : results) {
+            Long itemId = (Long) row[4];
+            if (!itemMap.containsKey(itemId)) {
+                ResponseProductItemDetaill itemDetail = ResponseProductItemDetaill.builder()
+                        .productItemId(itemId)
+                        .productItemSKU((String) row[5])
+                        .productItemQuantityInStock((Integer) row[6])
+                        .productItemImage((String) row[7])
+                        .productItemPrice((BigDecimal) row[8])
+                        .variations(new ArrayList<>())
+                        .build();
+                itemMap.put(itemId, itemDetail);
+                productDetail.getResponseProductItemDetails().add(itemDetail);
+            }
 
-        // Construir lista de ítems de productos y producto de respuesta final
-        List<ResponseItemProduct> responseItemProducts = productEntity.getProductItemEntities()
-                .stream()
-                .map(productItem -> ResponseItemProduct.builder()
-                        .productDTO(productMapper.mapProductEntityToDto(productEntity))
-                        .responseCategory(responseCategory)
-                        .responseVariationList(responseVariationList)
-                        .build())
-                .toList();
+            ResponseVariationn variationDetail = ResponseVariationn.builder()
+                    .variationName((String) row[9])
+                    .options((String) row[10])
+                    .build();
 
-        ResponseProduct responseProduct = ResponseProduct.builder()
-                .responseItemProducts(responseItemProducts)
-                .build();
-        logger.info("Product with ID {} found", productId);
-        return Optional.of(responseProduct);
+            itemMap.get(itemId).getVariations().add(variationDetail);
+        }
+
+        return productDetail;
     }
     @Transactional
     @Override
@@ -140,27 +126,18 @@ public class ProductAdapter implements ProductServiceOut {
         Optional<ProductEntity> productEntitySaved = getProductEntity(productId);
 
         if(!productEntitySaved.get().getProductName().equalsIgnoreCase(requestProduct.getProductName()) && productNameExistsByName(requestProduct.getProductName())) {throw new RuntimeException("The product name already exists");}
-        if (!productCategoryRepository.existByProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId())) {
-            logger.error("Error updating product with ID: {}", productId);
-            throw new RuntimeException("Category not found");
+
+        if(requestProduct.getProductCategoryId() !=null && !productCategoryRepository.existByProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId())) {
+            ProductCategoryEntity productCategorySaved = productCategoryRepository.findProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId()).orElseThrow(()->
+                    new AppExceptionNotFound("Category not found"));
+            productEntitySaved.get().setProductCategoryEntity(productCategorySaved);
+
         }
-
-        ProductCategoryEntity productCategoryEntity = productCategoryRepository.findProductCategoryIdAndStateTrue(requestProduct.getProductCategoryId()).get();
-        //todo: validar la existencia por id de las promociones
-        List<PromotionEntity> promotionSaved = new ArrayList<>(productCategoryEntity.getPromotionEntities());
-        List<PromotionEntity> promotionEntityList= promotionRepository.findAllByPromotionIdAndStateTrue(requestProduct.getPromotionId());
-        promotionSaved.addAll(promotionEntityList);
-        productCategoryEntity.setPromotionEntities(new HashSet<>(promotionSaved));
-        //add promotiones to our repository
-        ProductCategoryEntity productCategorySaved = productCategoryRepository.save(productCategoryEntity);
-
-        //todo:quitar el precio de producto, ya que existe solo en productoItem
-        productEntitySaved.get().setModifiedByUser("TEST");
+        productEntitySaved.get().setModifiedByUser("TEST-UPDATED");
         productEntitySaved.get().setModifiedAt(Constants.getTimestamp());
         productEntitySaved.get().setProductName(requestProduct.getProductName());
         productEntitySaved.get().setProductDescription(requestProduct.getProductDescription());
         productEntitySaved.get().setProductImage(requestProduct.getProductImage());
-        productEntitySaved.get().setProductCategoryEntity(productCategorySaved);
         ProductEntity productEntityUpdated =productRepository.save(productEntitySaved.get());
         logger.info("product updated with ID: {}", productEntitySaved.get().getProductId());
         return productMapper.mapProductEntityToDto(productEntityUpdated);
@@ -169,6 +146,13 @@ public class ProductAdapter implements ProductServiceOut {
     public ProductDTO deleteProductOut(Long productId) {
         logger.info("Searching product for delete with ID: {}", productId);
         Optional<ProductEntity> productEntitySaved = getProductEntity(productId);
+        List<ProductItemEntity> productItemEntities = productEntitySaved.get().getProductItemEntities();
+        productItemEntities.forEach(productItemEntity -> {
+            productItemEntity.setState(Constants.STATUS_INACTIVE);
+            productItemEntity.setDeletedAt(Constants.getTimestamp());
+            productItemEntity.setModifiedByUser("TEST-FROM-PRODUCT");
+        });
+        productItemRepository.deleteAll(productItemEntities);
         productEntitySaved.get().setModifiedByUser("TEST");
         productEntitySaved.get().setProductCategoryEntity(null);
         productEntitySaved.get().setDeletedAt(Constants.getTimestamp());
@@ -184,73 +168,49 @@ public class ProductAdapter implements ProductServiceOut {
 
         logger.info("Searching all products with the following parameters: {}",Constants.parametersForLogger(pageNumber, pageSize, orderBy, sortDir));
 
-        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(orderBy).ascending() : Sort.by(orderBy).descending();
+        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(orderBy).ascending() :
+                Sort.by(orderBy).descending();
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
 
-        if (productRepository.findAllByStateTrueAndPageable(pageable).isEmpty()) return null;
+        Page<ProductEntity> productPage = productRepository.findAll(pageable);
 
-        Page<ProductEntity> productEntityPage = productRepository.findAllByStateTrueAndPageable(pageable);
-        List<ResponseProduct> responseProductList = productEntityPage.getContent().stream()
-                .map(productEntity -> {
-                    List<ResponseSubCategory> subCategoryList = productEntity.getProductCategoryEntity().getSubCategories()
-                            .stream()
-                            .map(subCat -> {
-                                ResponseSubCategory responseSubCategory = new ResponseSubCategory();
-                                responseSubCategory.setProductCategoryDTO(productCategoryMapper.mapCategoryEntityToDTO(subCat));
-                                return responseSubCategory;
-                            }).toList();
+        // Convertir entidades a DTOs
+        List<ResponseProduct> responseProductList = productPage.getContent().stream().map(product -> {
+            List<ResponseProductItemDetaill> productItemDetails = product.getProductItemEntities().stream().map(item -> {
+                List<ResponseVariationn> variations = item.getVariationOptionEntitySet().stream()
+                        .map(variationOption -> new ResponseVariationn(
+                                variationOption.getVariationEntity().getVariationName(),
+                                variationOption.getVariationOptionValue()))
+                        .collect(Collectors.toList());
 
-                    List<PromotionDTO> promotionDTOList = promotionMapper.mapPromotionListToDtoList(
-                            productEntity.getProductCategoryEntity().getPromotionEntities());
+                return new ResponseProductItemDetaill(
+                        item.getProductItemId(),
+                        item.getProductItemSKU(),
+                        item.getProductItemQuantityInStock(),
+                        item.getProductItemImage(),
+                        item.getProductItemPrice(),
+                        variations
+                );
+            }).collect(Collectors.toList());
 
-                    ResponseCategory responseCategory = ResponseCategory.builder()
-                            .responseSubCategoryList(subCategoryList)
-                            .productCategoryDTO(productCategoryMapper.mapCategoryEntityToDTO(productEntity.getProductCategoryEntity()))
-                            .promotionDTOList(Set.copyOf(promotionDTOList))
-                            .build();
+            return new ResponseProduct(
+                    product.getProductId(),
+                    product.getProductName(),
+                    product.getProductDescription(),
+                    product.getProductImage(),
+                    productItemDetails
+            );
+        }).collect(Collectors.toList());
 
-                    // Construir opciones de variación y variaciones finales para el producto
-                    List<ResponseVariationFinal> responseVariationFinals = productEntity.getProductItemEntities()
-                            .stream()
-                            .map(productItemEntity -> {
-                                ResponseVariationFinal responseVariationFinal = new ResponseVariationFinal();
-                                List<VariationOptionDTO> variationOptionDTOList = productItemEntity.getVariationOptionEntitySet()
-                                        .stream()
-                                        .map(variationOptionMapper::mapVariationOptionEntityToDto)
-                                        .toList();
-                                responseVariationFinal.setVariationOptionDTOList(variationOptionDTOList);
-                                return responseVariationFinal;
-                            }).toList();
-
-                    List<ResponseVariation> responseVariationList = responseVariationFinals.stream()
-                            .map(responseVariationFinal -> {
-                                ResponseVariation responseVariation = new ResponseVariation();
-                                responseVariation.setResponseVariationFinals(responseVariationFinals);
-                                return responseVariation;
-                            }).toList();
-
-                    // Construir lista de ítems de productos y producto de respuesta final
-                    List<ResponseItemProduct> responseItemProducts = productEntity.getProductItemEntities()
-                            .stream()
-                            .map(productItem -> ResponseItemProduct.builder()
-                                    .productDTO(productMapper.mapProductEntityToDto(productEntity))
-                                    .responseCategory(responseCategory)
-                                    .responseVariationList(responseVariationList)
-                                    .build())
-                            .toList();
-                    return ResponseProduct.builder()
-                            .responseItemProducts(responseItemProducts)
-                            .build();
-                }).toList();
-        logger.info("Products found with the following parameters: {}", Constants.parametersForLogger(pageNumber, pageSize, orderBy, sortDir));
-        return ResponseListPageableProduct.builder()
-                .responseProductList(responseProductList)
-                .pageNumber(productEntityPage.getNumber())
-                .totalElements(productEntityPage.getTotalElements())
-                .totalPages(productEntityPage.getTotalPages())
-                .pageSize(productEntityPage.getSize())
-                .end(productEntityPage.isLast())
-                .build();
+        // Crear el objeto de respuesta paginada
+        return new ResponseListPageableProduct(
+                responseProductList,
+                productPage.getNumber(),
+                productPage.getSize(),
+                productPage.getTotalPages(),
+                productPage.getTotalElements(),
+                productPage.isLast()
+        );
     }
 
 
@@ -259,7 +219,54 @@ public class ProductAdapter implements ProductServiceOut {
         return productRepository.existsByProductIdWithStateTrue(productId);
     }
     private Optional<ProductEntity> getProductEntity(Long productId) {
-        if(!productExistsById(productId)) throw new RuntimeException("The product does not exist.");
+        if(!productExistsById(productId)) throw new AppExceptionNotFound("The product does not exist.");
         return productRepository.findProductByProductIdWithStateTrue(productId);
+    }
+    private ResponseCategoryy buildCategory(Object[] firstResult, List<Object[]> results) {
+        // Construir la categoría
+        ResponseCategoryy category = new ResponseCategoryy();
+        category.setProductCategoryId((Long) firstResult[4]);
+        category.setProductCategoryName((String) firstResult[5]);
+
+        // Agregar las promociones
+        List<PromotionDTO> promotions = results.stream()
+                .filter(result -> result[12] != null) // Filtra las filas que contienen promociones
+                .map(result -> new PromotionDTO(
+                        (Long) result[12],
+                        (String) result[13],
+                        (String) result[14],
+                        (Double) result[15],
+                        (Timestamp) result[16],
+                        (Timestamp) result[17]
+                ))
+                .collect(Collectors.toList());
+
+        category.setPromotionDTOList(promotions);
+        return category;
+    }
+
+    private List<ResponseProductItemDetaill> buildProductItems(List<Object[]> results) {
+        // Construir la lista de elementos de productos
+        return results.stream()
+                .map(result -> {
+                    ResponseProductItemDetaill item = new ResponseProductItemDetaill();
+                    item.setProductItemId((Long) result[6]);
+                    item.setProductItemSKU((String) result[7]);
+                    item.setProductItemQuantityInStock((Integer) result[8]);
+                    item.setProductItemImage((String) result[9]);
+                    item.setProductItemPrice((BigDecimal) result[10]);
+                    item.setVariations(buildVariations(result));
+                    return item;
+                })
+                .collect(Collectors.toList());
+    }
+
+    private List<ResponseVariationn> buildVariations(Object[] result) {
+        // Construir la lista de variaciones para cada producto item
+        ResponseVariationn variation = new ResponseVariationn(
+                (String) result[11],  // variationName
+                (String) result[12]   // variationOptionValue
+        );
+        return List.of(variation);
     }
 }
